fixed tour date table on mobile

--- a/styles.css
+++ b/styles.css
@@ -752,6 +752,11 @@ button.navbar-toggler {
 }
 
 @media screen and (max-width: 600px) {
+	.navbar {
+		margin: 0 auto;
+		padding: 0 5rem;
+	}
+
 	a > img {
 		weight: 50px;
 		height: 50px;
@@ -911,7 +916,7 @@ video {
 
 @media (max-width: 600px) {
 	.hero__title {
-		font-size: 3rem;
+		font-size: 2.5rem;
 		line-height: 1.17;
 		margin-top: 6rem;
 		/* centers vertically on screen */
